crates/tui/snapshots/fullscreen/state/chatgpt_subscription_models_chinese.snap
---
source: crates/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                                   [仪表盘]

            ┌── 配置 › ChatGPT 订阅 ───────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> 账户  ·  person@example.com                                         │
            │  计划  ·  pro                                                        │
            │                                                                      │
            │  模型 ────────────────────────────────────────────────────────────── │
            │  GPT Ash                                                             │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────└──────────────────────────────────────────────────────────────────────┘──────────
  > 构建任何内容
  ────────────────────────────────────────────────────────────────────────────────── 自动模型

  Esc 返回  ·  l 退出登录
