crates/tui/snapshots/fullscreen/state/chatgpt_subscription_reconnected.snap
---
source: crates/tui/src/app/state_tests.rs
expression: reconnected
---
  .                                                                                [Dashboard]

            ┌── Config › ChatGPT subscription ─────────────────────────────────[✗]─┐
            │                                                                      │
            │> Account  ·  person@example.test                                     │
            │                                                                      │
            │  Models ──────────────────────────────────────────────────────────── │
            │  No models available                                                 │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────└──────────────────────────────────────────────────────────────────────┘──────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────── Automatic model

  Esc to return  ·  l to sign out
