crates/tui/snapshots/fullscreen/state/config_advisor_settings.snap
---
source: crates/tui/src/app/state_tests.rs
expression: rendered
---
  .                                                                [Dashboard]  
                                                                                
        ┌── Config › Advisor ──────────────────────────────────────[✗]─┐        
        │                                                              │        
        │> Enable Advisor                                        Off + │        
        │  Advisor model                              Choose a model + │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────└──────────────────────────────────────────────────────────────┘──────  
  > Build anything                                                              
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  Enter/Space change · ←/→ details · Esc return
